docs: clean academic readme, add spark dgx integration, and optimize benchmark suite